# IronRAG.YouTrack

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  routing.yaml.example
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
src/youtrack_connector/: __init__.py  __main__.py  adapter.py  config.py  mapping.py  youtrack.py
tests/: test_full_stack_bootstrap.py  test_youtrack_adapter.py  test_youtrack_client.py  test_youtrack_config.py  test_youtrack_lifecycle.py  test_youtrack_mapping.py
tests/e2e/: README.md  __init__.py  bootstrap_full_stack.py  bootstrap_ironrag.cjs  bootstrap_youtrack.cjs  docker-compose.full.yml  docker-compose.yml  prepare_connector_runtime.py  test_full_stack_lifecycle.py  test_live_lifecycle.py
tests/e2e/mock_provider/: Dockerfile  server.py
